# zapry-bot-sdk-python

./: .gitignore  README.md  pyproject.toml
tests/: test_agent_loop.py  test_compat.py  test_guardrails.py  test_handoff.py  test_mcp.py  test_memory.py  test_middleware.py  test_natural.py  test_proactive.py  test_tools.py
zapry_agents_sdk/: __init__.py
zapry_agents_sdk/agent/: __init__.py  card.py  engine.py  loop.py  orchestrator.py  policy.py  registry.py
zapry_agents_sdk/core/: __init__.py  agent.py  config.py  middleware.py
zapry_agents_sdk/guardrails/: __init__.py  engine.py
zapry_agents_sdk/helpers/: __init__.py  handler_registry.py
zapry_agents_sdk/mcp/: __init__.py  config.py  converter.py  manager.py  protocol.py  transport.py
zapry_agents_sdk/memory/: __init__.py  buffer.py  extractor.py  formatter.py  long_term.py  session.py  short_term.py  store.py  types.py
zapry_agents_sdk/natural/: __init__.py  context_compressor.py  conversation_opener.py  conversation_state.py  emotional_tone.py  natural_conversation.py  prompt_fragments.py  response_style.py
zapry_agents_sdk/proactive/: __init__.py  feedback.py  scheduler.py
zapry_agents_sdk/tools/: __init__.py  openai_adapter.py  registry.py
zapry_agents_sdk/tracing/: __init__.py  engine.py
zapry_agents_sdk/utils/: __init__.py  logger.py  telegram_compat.py
zapry_bot_sdk/: __init__.py
zapry_bot_sdk/agent/: __init__.py  engine.py  handoff.py  loop.py  orchestrator.py  policy.py  registry.py
zapry_bot_sdk/core/: __init__.py  bot.py  config.py  middleware.py
zapry_bot_sdk/guardrails/: __init__.py  engine.py
zapry_bot_sdk/helpers/: __init__.py  handler_registry.py
zapry_bot_sdk/memory/: __init__.py  buffer.py  extractor.py  formatter.py  long_term.py  session.py  short_term.py  store_sqlite.py  working.py
zapry_bot_sdk/proactive/: __init__.py  feedback.py  scheduler.py
zapry_bot_sdk/tools/: __init__.py  openai_adapter.py  registry.py
zapry_bot_sdk/tracing/: __init__.py  engine.py
zapry_bot_sdk/utils/: __init__.py  logger.py  telegram_compat.py
